load("@doxygen//:doxygen.bzl", "doxygen")

doxygen(
    name = "docs",
    srcs = ["//p4c_backend:cpp_srcs"],
    exclude_patterns = [
        "*Test.cpp",
        "*_test.cpp",
    ],
    extract_all = True,
    project_brief = "C++ p4c backend plugin that emits proto IR from P4 source",
    project_name = "4ward p4c Backend",
    referenced_by_relation = True,
    references_relation = True,
    source_browser = True,
    warn_if_undocumented = False,
)
