load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

kt_jvm_library(
    name = "web_lib",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "*Test.kt",
            "PlaygroundServer.kt",
        ],
    ),
    deps = [
        "//p4runtime:p4runtime_lib",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:com_google_protobuf_protobuf_java_util",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

# Kept separate from `web_lib` so the heavy server deps (grpc-netty, etc.) don't propagate
# to the test targets that only need the lighter graph-extractor logic in `web_lib`.
kt_jvm_library(
    name = "playground_lib",
    srcs = ["PlaygroundServer.kt"],
    deps = [
        ":web_lib",
        "//p4runtime:p4runtime_lib",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_lib",
        "@fourward_maven//:io_grpc_grpc_netty",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@grpc-java//api",
    ],
)

kt_jvm_binary(
    name = "playground",
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
    ] + glob(["frontend/**"]),
    main_class = "fourward.web.PlaygroundServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":playground_lib"],
)

kt_jvm_test(
    name = "WebServerTest",
    srcs = ["WebServerTest.kt"],
    test_class = "fourward.web.WebServerTest",
    deps = [
        ":web_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ControlGraphExtractorTest",
    srcs = ["ControlGraphExtractorTest.kt"],
    test_class = "fourward.web.ControlGraphExtractorTest",
    deps = [
        ":web_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ParserGraphExtractorTest",
    srcs = ["ParserGraphExtractorTest.kt"],
    test_class = "fourward.web.ParserGraphExtractorTest",
    deps = [
        ":web_lib",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
    ],
)
