load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library", "kt_jvm_test")

package(
    default_applicable_licenses = ["//:license"],
    licenses = ["notice"],
)

kt_jvm_library(
    name = "web",
    srcs = glob(
        ["*.kt"],
        exclude = [
            "*Test.kt",
            "PlaygroundServer.kt",
        ],
    ),
    deps = [
        "//bazel:runfiles",
        "//p4runtime",
        "//simulator",
        "//simulator:ir_java_proto",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "//simulator:simulator_java_proto",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:com_google_protobuf_protobuf_java_util",
        "@fourward_maven//:io_grpc_grpc_api",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

# Kept separate from `web` so the heavy server deps (grpc-netty, etc.) don't propagate
# to the test targets that only need the lighter graph-extractor logic in `web`.
kt_jvm_library(
    name = "playground_lib",
    srcs = ["PlaygroundServer.kt"],
    deps = [
        ":web",
        "//p4runtime",
        "//simulator",
        "//simulator:p4info_java_proto",
        "//simulator:p4runtime_java_proto",
        "@fourward_maven//:io_grpc_grpc_netty",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@grpc-java//api",
    ],
)

kt_jvm_binary(
    name = "playground",
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ] + glob(["frontend/**"]),
    jvm_flags = [
        "-Dfourward.p4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    main_class = "fourward.web.PlaygroundServerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [":playground_lib"],
)

kt_jvm_test(
    name = "WebServerTest",
    srcs = ["WebServerTest.kt"],
    data = [
        "//p4c_backend:p4c-4ward",
        "@p4c//p4include",
        "@p4c//p4include:core.p4",
    ] + glob(["frontend/**"]),
    jvm_flags = [
        "-Dfourward.p4include=$(rlocationpath @p4c//p4include:core.p4)",
    ],
    test_class = "fourward.web.WebServerTest",
    deps = [
        ":web",
        "//p4runtime",
        "//simulator",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
        "@fourward_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)

kt_jvm_test(
    name = "ControlGraphExtractorTest",
    srcs = ["ControlGraphExtractorTest.kt"],
    test_class = "fourward.web.ControlGraphExtractorTest",
    deps = [
        ":web",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "ParserGraphExtractorTest",
    srcs = ["ParserGraphExtractorTest.kt"],
    test_class = "fourward.web.ParserGraphExtractorTest",
    deps = [
        ":web",
        "//simulator:ir_java_proto",
        "@fourward_maven//:junit_junit",
    ],
)
