load("//cli/tests:cram.bzl", "cram_test")

cram_test(
    name = "getting_started_test",
    src = "getting_started.t",
    data = [
        "//cli:4ward",
        "//examples:passthrough.p4",
        "//examples:passthrough.stf",
        "@p4c//:p4include",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
        "P4=$(rootpath //examples:passthrough.p4)",
        "STF=$(rootpath //examples:passthrough.stf)",
    ],
)

cram_test(
    name = "compile_test",
    src = "compile.t",
    data = [
        "//cli:4ward",
        "//examples:passthrough.p4",
        "//examples:passthrough.stf",
        "@p4c//:p4include",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
        "P4=$(rootpath //examples:passthrough.p4)",
        "STF=$(rootpath //examples:passthrough.stf)",
    ],
)

cram_test(
    name = "basic_table_test",
    src = "basic_table.t",
    data = [
        "//cli:4ward",
        "//examples:basic_table.p4",
        "//examples:basic_table.stf",
        "@p4c//:p4include",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
        "P4=$(rootpath //examples:basic_table.p4)",
        "STF=$(rootpath //examples:basic_table.stf)",
    ],
)

cram_test(
    name = "errors_test",
    src = "errors.t",
    data = [
        "//cli:4ward",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
    ],
)

cram_test(
    name = "textproto_test",
    src = "textproto.t",
    data = [
        "//cli:4ward",
        "//examples:passthrough.p4",
        "//examples:passthrough.stf",
        "@p4c//:p4include",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
        "P4=$(rootpath //examples:passthrough.p4)",
        "STF=$(rootpath //examples:passthrough.stf)",
    ],
)

cram_test(
    name = "packet_mismatch_test",
    src = "packet_mismatch.t",
    data = [
        "//cli:4ward",
        "//examples:passthrough.p4",
        "@p4c//:p4include",
    ],
    env_args = [
        "FOURWARD=$(rootpath //cli:4ward)",
        "P4=$(rootpath //examples:passthrough.p4)",
    ],
)
