load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//e2e_tests:p4c.bzl", "p4c_compile")

package(default_testonly = True)

p4c_compile(
    name = "assert_log_msg",
    src_p4 = "assert_log_msg.p4",
)

kt_jvm_test(
    name = "assert_log_msg_test",
    srcs = ["AssertLogMsgTest.kt"],
    data = [
        "assert_log_msg.stf",
        ":assert_log_msg_pb",
    ],
    test_class = "fourward.e2e.assertlogmsg.AssertLogMsgTest",
    deps = [
        "//stf",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)
