load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "assert_log_msg",
    src = "assert_log_msg.p4",
    out = "assert_log_msg.txtpb",
)

kt_jvm_test(
    name = "assert_log_msg_test",
    srcs = ["AssertLogMsgTest.kt"],
    data = [
        "assert_log_msg.stf",
        ":assert_log_msg",
    ],
    test_class = "fourward.e2e.assertlogmsg.AssertLogMsgTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
