load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

genrule(
    name = "basic_table_pb",
    srcs = ["basic_table.p4"],
    outs = ["basic_table.txtpb"],
    cmd = "$(execpath //p4c_backend:p4c-4ward) -I $$(dirname $(execpath @p4c//:core_p4)) -o $@ $(SRCS)",
    tools = [
        "//p4c_backend:p4c-4ward",
        "@p4c//:core_p4",
        "@p4c//:p4include",
    ],
    visibility = ["//p4runtime:__pkg__"],
)

kt_jvm_test(
    name = "basic_table_test",
    srcs = ["BasicTableTest.kt"],
    data = [
        "basic_table.stf",
        ":basic_table_pb",
        "//simulator",
    ],
    test_class = "fourward.e2e.basictable.BasicTableTest",
    deps = [
        "//e2e_tests/stf:stf_runner",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:junit_junit",
    ],
)
