load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//e2e_tests:p4c.bzl", "p4c_compile")

p4c_compile(
    name = "basic_table",
    src_p4 = "basic_table.p4",
    visibility = [
        "//cli:__pkg__",
        "//e2e_tests/network:__pkg__",
        "//network:__pkg__",
        "//p4runtime:__pkg__",
    ],
)

kt_jvm_test(
    name = "basic_table_test",
    srcs = ["BasicTableTest.kt"],
    data = [
        "basic_table.stf",
        ":basic_table_pb",
    ],
    test_class = "fourward.e2e.basictable.BasicTableTest",
    deps = [
        "//e2e_tests/stf:stf_runner",
        "@fourward_maven//:com_google_protobuf_protobuf_java",
        "@fourward_maven//:junit_junit",
    ],
)
