load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "basic_table",
    src = "basic_table.p4",
    out = "basic_table.txtpb",
    visibility = [
        "//cli:__pkg__",
        "//e2e_tests/network:__pkg__",
        "//p4runtime:__pkg__",
    ],
)

kt_jvm_test(
    name = "basic_table_test",
    srcs = ["BasicTableTest.kt"],
    data = [
        "basic_table.stf",
        ":basic_table",
    ],
    test_class = "fourward.e2e.basictable.BasicTableTest",
    deps = [
        "//stf",
        "@fourward_maven//:junit_junit",
    ],
)
