load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//e2e_tests:bmv2_diff.bzl", "bmv2_diff_test_suite")

cc_binary(
    name = "bmv2_driver",
    srcs = ["bmv2_driver.cpp"],
    copts = ["-std=c++17"],
    # BMv2 uses 128-bit atomics; clang on Linux needs -latomic explicitly.
    linkopts = select({
        "@platforms//os:linux": ["-latomic"],
        "//conditions:default": [],
    }),
    deps = ["@behavioral_model//:simple_switch_lib"],
)

bmv2_diff_test_suite(
    name = "bmv2_diff_test",
    tests = [
        "equality-bmv2",
        "flag_lost-bmv2",
        "gauntlet_nested_table_calls-bmv2",
        "issue1879-bmv2",
        "opassign1-bmv2",
    ],
)
