load("//bazel:fourward_pipeline.bzl", "fourward_pipeline")

package(
    default_applicable_licenses = ["//:license"],
    default_testonly = True,
    licenses = ["notice"],
)

fourward_pipeline(
    name = "constrained_table",
    src = "constrained_table.p4",
    out = "constrained_table.txtpb",
    visibility = ["//p4runtime:__pkg__"],
)
