load("//e2e_tests:corpus.bzl", "corpus_test_suite")

# p4c corpus STF tests run in CI. All entries must pass.
#
# To add a new test:
#   1. Add its base name to v1model_stf_corpus_test below.
#   2. Run: bazel test //e2e_tests/corpus:v1model_stf_corpus_test
#   3. If it fails, move it to the appropriate manual suite below instead,
#      grouped with other tests blocked on the same missing feature.
#      Create a new manual suite if no existing one fits.
corpus_test_suite(
    name = "v1model_stf_corpus_test",
    includes = [
        "@p4c//testdata/p4_16_samples:arith-inline-skeleton.p4",
        "@p4c//testdata/p4_16_samples:arith-skeleton.p4",
        "@p4c//testdata/p4_16_samples:ml-headers.p4",
    ],
    stf_overrides = {
        # Upstream STF expects 14 bytes but omits 3 bytes of un-parsed payload
        # that v1model appends after deparsed headers.
        "gauntlet_invalid_hdr_short_circuit-bmv2": "//e2e_tests/corpus:gauntlet_invalid_hdr_short_circuit-bmv2.stf",
    },
    tests = [
        "arith-bmv2",
        "arith-inline-bmv2",
        "arith1-bmv2",
        "arith2-bmv2",
        "arith2-inline-bmv2",
        "arith3-bmv2",
        "arith4-bmv2",
        "arith5-bmv2",
        "array-copy-bmv2",
        "bvec-hdr-bmv2",
        "checksum-l4-bmv2",
        "checksum1-bmv2",
        "checksum2-bmv2",
        "checksum3-bmv2",
        "constant-in-calculation-bmv2",
        "default-action-arg-bmv2",
        "default_action-bmv2",
        "enum-bmv2",
        "equality-bmv2",
        "equality-varbit-bmv2",
        "flag_lost-bmv2",
        "gauntlet_action_mux-bmv2",
        "gauntlet_action_return-bmv2",
        "gauntlet_arithref_cast-bmv2",
        "gauntlet_complex_initialization-bmv2",
        "gauntlet_copy_out-bmv2",
        "gauntlet_enum_assign-bmv2",
        "gauntlet_exit_after_valid-bmv2",
        "gauntlet_exit_combination_1-bmv2",
        "gauntlet_exit_combination_10-bmv2",
        "gauntlet_exit_combination_11-bmv2",
        "gauntlet_exit_combination_13-bmv2",
        "gauntlet_exit_combination_14-bmv2",
        "gauntlet_exit_combination_15-bmv2",
        "gauntlet_exit_combination_16-bmv2",
        "gauntlet_exit_combination_17-bmv2",
        "gauntlet_exit_combination_18-bmv2",
        "gauntlet_exit_combination_19-bmv2",
        "gauntlet_exit_combination_2-bmv2",
        "gauntlet_exit_combination_20-bmv2",
        "gauntlet_exit_combination_21-bmv2",
        "gauntlet_exit_combination_22-bmv2",
        "gauntlet_exit_combination_23-bmv2",
        "gauntlet_exit_combination_3-bmv2",
        "gauntlet_exit_combination_4-bmv2",
        "gauntlet_exit_combination_5-bmv2",
        "gauntlet_exit_combination_6-bmv2",
        "gauntlet_exit_combination_7-bmv2",
        "gauntlet_exit_combination_8-bmv2",
        "gauntlet_exit_combination_9-bmv2",
        "gauntlet_function_if_hdr_return-bmv2",
        "gauntlet_function_return-bmv2",
        "gauntlet_function_return_cast-bmv2",
        "gauntlet_hdr_assign_1-bmv2",
        "gauntlet_hdr_assign_2-bmv2",
        "gauntlet_hdr_function_cast-bmv2",
        "gauntlet_hdr_in_value-bmv2",
        "gauntlet_hdr_init-bmv2",
        "gauntlet_hdr_int_initializer-bmv2",
        "gauntlet_hdr_out_in_action-bmv2",
        "gauntlet_hdr_set_valid-bmv2",
        "gauntlet_index_1-bmv2",
        "gauntlet_index_2-bmv2",
        "gauntlet_index_4-bmv2",
        "gauntlet_index_5-bmv2",
        "gauntlet_index_6-bmv2",
        "gauntlet_index_7-bmv2",
        "gauntlet_index_8-bmv2",
        "gauntlet_index_9-bmv2",
        "gauntlet_indirect_hdr_assign_1-bmv2",
        "gauntlet_indirect_hdr_assign_2-bmv2",
        "gauntlet_instance_overwrite-bmv2",
        "gauntlet_int_casting-bmv2",
        "gauntlet_int_slice-bmv2",
        "gauntlet_invalid_hdr_assign-bmv2",
        "gauntlet_invalid_hdr_short_circuit-bmv2",
        "gauntlet_list_as_in_argument-bmv2",
        "gauntlet_mux_eval-bmv2",
        "gauntlet_mux_hdr-bmv2",
        "gauntlet_mux_typecasting-bmv2",
        "gauntlet_mux_validity-bmv2",
        "gauntlet_nested_ifs_in_function-bmv2",
        "gauntlet_nested_slice-bmv2",
        "gauntlet_nested_switch-bmv2",
        "gauntlet_nested_table_calls-bmv2",
        "gauntlet_return_truncate-bmv2",
        "gauntlet_set_invalid-bmv2",
        "gauntlet_set_valid_in_function-bmv2",
        "gauntlet_short_circuit-bmv2",
        "gauntlet_side_effect_order_1-bmv2",
        "gauntlet_side_effect_order_2-bmv2",
        "gauntlet_side_effect_order_3-bmv2",
        "gauntlet_side_effect_order_4-bmv2",
        "gauntlet_side_effect_order_5-bmv2",
        "gauntlet_side_effects_in_mux-bmv2",
        "gauntlet_switch_exclusivity-bmv2",
        "gauntlet_switch_nested_table_apply-bmv2",
        "gauntlet_switch_shadowing-bmv2",
        "gauntlet_table_call_in_expression-bmv2",
        "gauntlet_typedef_cast-bmv2",
        "gauntlet_uninitialized_bool_struct-bmv2",
        "gauntlet_variable_shadowing-bmv2",
        "header-bool-bmv2",
        "header-stack-ops-bmv2",
        "invalid-hdr-warnings3-bmv2",
        "ipv6-switch-ml-bmv2",
        "issue-2123-2-bmv2",
        "issue-2123-3-bmv2",
        "issue1000-bmv2",
        "issue1025-bmv2",
        "issue1049-bmv2",
        "issue1062-1-bmv2",
        "issue1097-2-bmv2",
        "issue1566-bmv2",
        "issue1755-1-bmv2",
        "issue1755-bmv2",
        "issue1768-bmv2",
        "issue1814-1-bmv2",
        "issue1824-bmv2",
        "issue1879-bmv2",
        "issue2147-bmv2",
        "issue2153-bmv2",
        "issue2170-bmv2",
        "issue2176-bmv2",
        "issue2205-1-bmv2",
        "issue2205-bmv2",
        "issue2221-bmv2",
        "issue2225-bmv2",
        "issue2287-bmv2",
        "issue2343-bmv2",
        "issue2375-1-bmv2",
        "issue2375-bmv2",
        "issue2383-bmv2",
        "issue2392-bmv2",
        "issue2488-bmv2",
        "issue2498-bmv2",
        "issue2614-bmv2",
        "issue3488-1-bmv2",
        "issue3488-bmv2",
        "issue447-1-bmv2",
        "issue447-2-bmv2",
        "issue447-3-bmv2",
        "issue447-4-bmv2",
        "issue447-5-bmv2",
        "issue447-bmv2",
        "issue510-bmv2",
        "issue561-1-bmv2",
        "issue561-2-bmv2",
        "issue561-3-bmv2",
        "issue561-4-bmv2",
        "issue561-5-bmv2",
        "issue561-6-bmv2",
        "issue561-7-bmv2",
        "issue635-bmv2",
        "issue655-bmv2",
        "issue774-4-bmv2",
        "issue983-bmv2",
        "issue995-bmv2",
        "key-bmv2",
        "match-on-exprs-bmv2",
        "opassign1-bmv2",
        "opassign2-bmv2",
        "parser_error-bmv2",
        "runtime-index-2-bmv2",
        "runtime-index-bmv2",
        "saturated-bmv2",
        "stack_complex-bmv2",
        "subparser-with-header-stack-bmv2",
        "table-entries-exact-bmv2",
        "table-entries-exact-ternary-bmv2",
        "table-entries-lpm-bmv2",
        "table-entries-optional-bmv2",
        "table-entries-priority-bmv2",
        "table-entries-range-bmv2",
        "table-entries-ser-enum-bmv2",
        "table-entries-ternary-bmv2",
        "ternary2-bmv2",
        "test-parserinvalidargument-error-bmv2",
        "union-bmv2",
        "union-valid-bmv2",
        "union1-bmv2",
        "union2-bmv2",
        "union3-bmv2",
        "v1model-const-entries-bmv2",
        "v1model-special-ops-bmv2",
    ],
)

# Tests that need sibling skeleton .p4 files as #include dependencies.
# These are compiled with an extra -I pointing at the testdata directory.
# Blocked on user-defined extern support (extern functions with no P4 body).
corpus_test_suite(
    name = "skeleton_includes_stf_corpus_test",
    includes = [
        "@p4c//testdata/p4_16_samples:arith-inline-skeleton.p4",
        "@p4c//testdata/p4_16_samples:arith-skeleton.p4",
        "@p4c//testdata/p4_16_samples:ml-headers.p4",
    ],
    tags = ["manual"],
    tests = [
        "extern-funcs-bmv2",  # unhandled extern call: extern_func
    ],
)

# PSA corpus STF tests that pass in CI. Covers basic PSA pipeline: ingress/egress
# parsing, drop-by-default, send_to_port, counters, metadata, parser errors.
corpus_test_suite(
    name = "psa_stf_corpus_test",
    tests = [
        "psa-basic-counter-bmv2",
        "psa-bool-ternary-const-entry-bmv2",
        "psa-drop-all-bmv2",
        "psa-drop-all-corrected-bmv2",
        "psa-example-register2-bmv2",
        "psa-fwd-bmv2",
        "psa-metadata-bmv2",
        "psa-parser-error-test-bmv2",
        "psa-register-complex-bmv2",
        "psa-register-read-write-2-bmv2",
        "psa-register-read-write-bmv2",
        "psa-top-level-assignments-bmv2",
        "psa-unicast-or-drop-bmv2",
        "psa-unicast-or-drop-corrected-bmv2",
    ],
)

# PSA tests blocked on missing features. Each entry has an inline comment
# explaining the blocker.
# Run manually: bazel test //e2e_tests/corpus:psa_manual_stf_corpus_test
corpus_test_suite(
    name = "psa_manual_stf_corpus_test",
    tags = ["manual"],
    tests = [
        "hash-extern-bmv2",  # Hash extern (get_hash method)
        "internet_checksum1-bmv2",  # InternetChecksum extern (clear/add/get)
        "psa-e2e-cloning-basic-bmv2",  # E2E cloning
        "psa-end-of-ingress-test-bmv2",  # end_of_ingress extern
        "psa-example-dpdk-varbit-bmv2",  # lookahead type resolution
        "psa-i2e-cloning-basic-bmv2",  # I2E cloning
        "psa-meter7-bmv2",  # Meter extern (execute method)
        "psa-multicast-basic-2-bmv2",  # Multicast
        "psa-multicast-basic-bmv2",  # Multicast
        "psa-multicast-basic-corrected-bmv2",  # Multicast
        "psa-recirculate-no-meta-bmv2",  # Recirculate
        "psa-resubmit-bmv2",  # Resubmit
    ],
)

# Tests that take excessively long to compile with p4c-4ward.
corpus_test_suite(
    name = "slow_compile_stf_corpus_test",
    tags = ["manual"],
    tests = [
        "gauntlet_various_ops-bmv2",  # p4c-4ward takes 10+ minutes
    ],
)

# Tests blocked on unsupported non-v1model/non-PSA architectures.
# These fail at p4c-4ward compile time.
corpus_test_suite(
    name = "unsupported_arch_stf_corpus_test",
    tags = ["manual"],
    tests = [
        "gauntlet_optional-bmv2",  # unsupported architecture 'top'
    ],
)
